RESOLVED FIXED83534
If a callback function returns a C++ null, convert to undefined.
https://bugs.webkit.org/show_bug.cgi?id=83534
Summary If a callback function returns a C++ null, convert to undefined.
Gavin Barraclough
Reported 2012-04-09 18:38:28 PDT
Previously we didn't check for NULL return values here, recently we hardened the API to throw an error, but this is too restrictive for some clients. Instead just promote to a JS undefined.
Attachments
Fix (3.02 KB, patch)
2012-04-09 18:39 PDT, Gavin Barraclough
ggaren: review+
Gavin Barraclough
Comment 1 2012-04-09 18:39:12 PDT
Geoffrey Garen
Comment 2 2012-04-09 18:40:13 PDT
Comment on attachment 136364 [details] Fix r=me
Gavin Barraclough
Comment 3 2012-04-09 18:41:41 PDT
Fixed in r113654
Note You need to log in before you can comment on or make changes to this bug.