If a callback function returns a C++ null, convert to undefined. https://bugs.webkit.org/show_bug.cgi?id=83534

Reviewed by Geoff Garen.

* API/JSCallbackFunction.cpp:
    - If a callback function returns a C++ null, convert to undefined.
(JSC::JSCallbackFunction::call):
* API/tests/testapi.c:
(Base_returnHardNull):
* API/tests/testapi.js:
    - Add a test case for callback functions that return a C++ null.



Canonical link: https://commits.webkit.org/100964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113654 268f45cc-cd09-0410-ab3c-d52691b4dbfc